Fix application content styling
<pre> blocks look bad on mobile devices - let them wrap text and use
a sans-serif font. Let's keep using <pre> for now, as this preserves
new lines cleanly on the end user details view.

--- a/events/static/app.css
+++ b/events/static/app.css
@@ -4,6 +4,13 @@
     margin-bottom: 0 !important;
 }
 
+.application-content {
+    display: inline;
+    word-wrap: normal;
+    white-space: pre-wrap;
+    font-family: var(--bs-font-sans-serif);
+}
+
 .brand-link {
     font-size: 1.7rem;
     text-decoration: none;
